--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,4 @@
 @import"extra/extra.scss";
 @import"animation/animation.scss";
 @import"function/function.scss";
+@import"./mobile/res-navbar.scss";
