--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,18 @@
         padding-left: 4rem;
         color: #E4E6EB;
         font-size: 1.5rem; }
+        @media only screen and (max-width: 1100px) {
+          .nav-search-box--logo--search-box {
+            padding: 0%;
+            padding-left: 4rem;
+            height: 4rem;
+            width: 4rem;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            margin-left: 0.5rem; } }
         .nav-search-box--logo--search-box::placeholder {
           color: #A7B1AC;
           font-family: 'Roboto', sans-serif;
@@ -42,6 +54,9 @@
           fill: #A7B1AC;
           left: 8rem;
           top: 2rem; }
+          @media only screen and (max-width: 1100px) {
+            .nav-search-box--logo--search-box--icon {
+              left: 7rem; } }
           .nav-search-box--logo--search-box--icon :hover {
             cursor: pointer; }
 
@@ -52,6 +67,9 @@
   display: grid;
   grid-template-rows: 100%;
   grid-template-columns: repeat(5, 20%); }
+  @media only screen and (max-width: 1100px) {
+    .icon-box {
+      margin-left: -3rem; } }
   .icon-box-con {
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -1477,3 +1495,7 @@ body {
 
 #open4:checked ~ .profile-con {
   visibility: visible; }
+
+@media only screen and (max-width: 1150px) {
+  .porfile-box {
+    margin-left: 1rem; } }
