--- a/sass/layout/navbar.scss
+++ b/sass/layout/navbar.scss
@@ -33,6 +33,20 @@
                                 padding-left: 4rem;
                                 color: #E4E6EB;
                                 font-size: 1.5rem;
+                                @media only screen and (max-width: 1100px) {
+                                    & {
+                                        padding: 0%;
+                                        padding-left: 4rem;
+                                        height: 4rem;
+                                        width: 4rem;
+                                        border-radius: 50%;
+                                        -webkit-border-radius: 50%;
+                                        -moz-border-radius: 50%;
+                                        -ms-border-radius: 50%;
+                                        -o-border-radius: 50%;
+                                        margin-left: 0.5rem;
+                                    }
+                                }
                                 &::placeholder {
                                     color: #A7B1AC;
                                     font-family: 'Roboto', sans-serif;
@@ -43,6 +57,11 @@
                                     fill: #A7B1AC;
                                     left: 8rem;
                                     top: 2rem;
+                                    @media only screen and (max-width: 1100px) {
+                                        & {
+                                            left: 7rem;
+                                        }
+                                    }
                                      :hover {
                                         cursor: pointer;
                                     }
@@ -59,6 +78,11 @@
                     display: grid;
                     grid-template-rows: 100%;
                     grid-template-columns: repeat(5, 20%);
+                    @media only screen and (max-width: 1100px) {
+                        & {
+                            margin-left: -3rem;
+                        }
+                    }
                     &-con {
                         border-radius: 10px;
                         -webkit-border-radius: 10px;
