--- a/sass/layout/navbar.scss
+++ b/sass/layout/navbar.scss
@@ -62,6 +62,11 @@
                                             left: 7rem;
                                         }
                                     }
+                                    @media only screen and (max-width:1000px) {
+                                        & {
+                                            left: 6.2rem;
+                                        }
+                                    }
                                      :hover {
                                         cursor: pointer;
                                     }
@@ -81,6 +86,11 @@
                     @media only screen and (max-width: 1100px) {
                         & {
                             margin-left: -3rem;
+                        }
+                    }
+                    @media only screen and (max-width:1000px) {
+                        & {
+                            margin-left: 0rem;
                         }
                     }
                     &-con {
@@ -131,6 +141,16 @@
                     -moz-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -ms-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -o-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    @media only screen and (max-width: 1150px) {
+                        & {
+                            margin-left: 1rem;
+                        }
+                    }
+                    @media only screen and (max-width:1100px) {
+                        & {
+                            display: none;
+                        }
+                    }
                     &:hover {
                         transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -webkit-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -162,6 +182,11 @@
                     display: grid;
                     grid-template-rows: 100%;
                     grid-template-columns: repeat(4, 25%);
+                    @media only screen and (max-width: 1100px) {
+                        & {
+                            margin-left: 12rem;
+                        }
+                    }
                     &--profile {
                         border-radius: 50%;
                         background-color: #3a3b3c;
