--- a/css/style.css
+++ b/css/style.css
@@ -1539,3 +1539,54 @@ body {
 
 #open4:checked ~ .profile-con {
   visibility: visible; }
+
+.nav-responsive {
+  width: 100vw;
+  height: 12vh;
+  background-color: #242526;
+  display: grid;
+  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: 100%; }
+  .nav-responsive--logo-con {
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 80% repeat(2, 10%); }
+    .nav-responsive--logo-con--messenger-circle {
+      background-color: #606163;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      margin-top: 0.7rem;
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      align-content: center;
+      justify-content: center;
+      margin-left: 0rem; }
+      .nav-responsive--logo-con--messenger-circle--icon {
+        fill: #B0B3B8; }
+    .nav-responsive--logo-con--search-circle {
+      background-color: #606163;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      margin-top: 0.7rem;
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      align-content: center;
+      justify-content: center;
+      margin-left: 0.5rem; }
+      .nav-responsive--logo-con--search-circle--icon {
+        fill: #B0B3B8; }
+    .nav-responsive--logo-con--logo {
+      width: 16rem;
+      height: 5rem; }
