--- a/sass/layout/navbar.scss
+++ b/sass/layout/navbar.scss
@@ -6,7 +6,7 @@
                     overflow: hidden;
                     align-items: center;
                     justify-items: center;
-                    display: none;
+                    visibility: hidden;
                     &-search-box {
                         width: 24.2%;
                         height: 5rem;
