--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,5 @@
 @import"extra/extra.scss";
 @import"animation/animation.scss";
 @import"function/function.scss";
-@import"./mobile/res-navbar.scss";
+@import"mobile/res-navbar.scss";
+@import"mobile/res-extra.scss";
