--- a/sass/mobile/res-navbar.scss
+++ b/sass/mobile/res-navbar.scss
@@ -1,16 +1,34 @@
 .nav-responsive {
     width: 100vw;
-    height: 12vh;
+    height: 13vh;
     background-color: #242526;
     display: grid;
     grid-template-rows: repeat(2, 50%);
     grid-template-columns: 100%;
+    &--icon-con {
+        display: grid;
+        grid-template-rows: 100%;
+        grid-template-columns: repeat(6, 16.6%);
+        &--icon-box {
+            display: flex;
+            align-items: flex-end;
+            justify-items: center;
+            align-content: center;
+            justify-content: center;
+            border-bottom: #2374e1;
+            &--icon {
+                height: 2.8rem;
+                width: 2.8rem;
+                fill: #b0b3b8;
+            }
+        }
+    }
     &--logo-con {
         display: grid;
         grid-template-rows: 100%;
         grid-template-columns: 80% repeat(2, 10%);
         &--messenger-circle {
-            background-color: #606163;
+            background-color: #3a3b3c;
             width: 3rem;
             height: 3rem;
             border-radius: 50%;
@@ -26,11 +44,11 @@
             justify-content: center;
             margin-left: 0rem;
             &--icon {
-                fill: #B0B3B8;
+                fill: #fff;
             }
         }
         &--search-circle {
-            background-color: #606163;
+            background-color: #3a3b3c;
             width: 3rem;
             height: 3rem;
             border-radius: 50%;
@@ -46,7 +64,7 @@
             justify-content: center;
             margin-left: 0.5rem;
             &--icon {
-                fill: #B0B3B8;
+                fill: #fff;
             }
         }
         &--logo {
